--- a/day+night/daynight.html
+++ b/day+night/daynight.html
@@ -6,7 +6,14 @@
 		<script src="myJS.js"></script>
 	</head>
 
-	<div class="pagecontent">
-		<button>click me</button>
-	</div>
+	<body>
+		<div id="outer">
+	    	<div id= "orb" class= "sun">
+	    		<div id="moonspot1"></div>
+	    		<div id="moonspot2"></div>
+	    		<div id="moonspot3"></div>
+	    	</div>
+	    	<div id= "sky" class= "day"></div>
+	    </div>
+	</body>
 </html>
