--- a/musicBoxes/musicBoxes.html
+++ b/musicBoxes/musicBoxes.html
@@ -6,4 +6,12 @@
 		<script src='musicBoxes.js'></script>
 	</head>
 
+	<body>
+		<audio controls>
+			<source src="/music_boxes/c_note.mp3" type="audio/mpeg"></source>
+			<source src="/music_boxes/c_note.ogg" type="audio/ogg"></source>
+			<source src="/music_boxes/c_note.wav" type="audio/wav"></source>
+		</audio>
+	</body>
+
 </html>
